fix: fix alignment of header title

--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ header {
 
 .header-content {
   text-align: center;
-  padding: 10px;
+  padding: 0.5rem 5rem 0.5rem 5rem;
   background-color: var(--color-container-dark);
   backdrop-filter: blur(5px);
   width: fit-content;
